[Chores] Try to install satooshi for coverage
[Chores] Edit composer.json

The composer.json is edited and modified include the package for the coverage.

hihi

ih

ih

ih

ih

ih

ih

ih

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
     "require": {
         "slim/slim": "^3.1",
         "illuminate/database": "^5.2",
-        "firebase/php-jwt": "^3.0",
-        "guzzlehttp/guzzle": "~6.0"
+        "firebase/php-jwt": "^3.0"
+    },
+    "require-dev" : {
+        "satooshi/php-coveralls" : "^1.0"
     }
 }
