--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         }
     },
     "require": {
-        "slim/slim": "^3.1",
-        "illuminate/database": "^5.2",
-        "firebase/php-jwt": "^3.0"
+        // "slim/slim": "^3.1",
+        // "illuminate/database": "^5.2",
+        // "firebase/php-jwt": "^3.0"
     }
 }
