--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,13 @@
     ],
 
     "autoload": {
-        "psr-4": {
+        "psr-7": {
             "Elchroy\\Lemogis\\": "src/app/"
         }
+    },
+    "require": {
+        "slim/slim": "^3.1",
+        "illuminate/database": "^5.2",
+        "firebase/php-jwt": "^3.0"
     }
-    // "require": {
-    //     "slim/slim": "^3.1",
-    //     "illuminate/database": "^5.2",
-    //     "firebase/php-jwt": "^3.0"
-    // }
 }
