--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
         "slim/slim": "^3.1",
         "illuminate/database": "^5.2",
         "firebase/php-jwt": "^3.0"
+    },
+    "require-dev" : {
+        "satooshi/php-coveralls" : "^1.0"
     }
 }
