--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
     "require": {
         "slim/slim": "^3.1",
         "illuminate/database": "^5.2",
-        "firebase/php-jwt": "^3.0"
+        "firebase/php-jwt": "^3.0",
+        "mikey179/vfsStream": "^1.6"
     },
     "require-dev" : {
-        "satooshi/php-coveralls" : "^1.0",
-        "there4/slim-test-helpers" : "0.9.4"
+        "satooshi/php-coveralls" : "^1.0"
     }
 }
