--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,6 @@
         "firebase/php-jwt": "^3.0"
     },
     "require-dev" : {
-        "satooshi/php-coveralls" : "^1.0",
-        "there4/slim-test-helpers" : "0.9.4"
+        "satooshi/php-coveralls" : "^1.0"
     }
 }
