--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require": {
         "slim/slim": "^3.1",
         "illuminate/database": "^5.2",
-        "firebase/php-jwt": "^3.0"
+        "firebase/php-jwt": "^3.0",
+        "mikey179/vfsStream": "^1.6"
     },
     "require-dev" : {
         "satooshi/php-coveralls" : "^1.0"
