--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
 
 before_install:
     - mysql -e "create database IF NOT EXISTS naija;" -uroot
+    - mysql -e "CREATE TABLE" -uroot
 
 script:
     - mkdir -p build/logs
