[Chroes] Rename from emogi to emoji
The name emogi is changed to emoji throughout the files of the application.
This is done to follow standard. It makes it easier to understand.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "elchroy/lemogis",
+    "name": "elchroy/lemojis",
     "authors": [
         {
             "name": "andela-celisha-wigwe",
@@ -9,7 +9,7 @@
 
     "autoload": {
         "psr-4": {
-            "Elchroy\\Lemogis\\": "src/app/"
+            "Elchroy\\Lemojis\\": "src/app/"
         }
     },
     "require": {
